--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@
             document.body.style.overflow = 'hidden';
         } else {
             // Redirect to WeTransfer link if logged in
-            window.location.href = 'https://we.tl/t-cJfPMXh1cf';
+            window.location.href = 'https://we.tl/t-80lyqRbkA9';
         }
     });
 });
@@ -2270,7 +2270,7 @@ auth.onAuthStateChanged((user) => {
     // If user just logged in from download modal, redirect to WeTransfer
     if (user && document.getElementById('download-auth-modal').classList.contains('active')) {
         toggleDownloadAuthModal(false);
-        window.location.href = 'https://we.tl/t-cJfPMXh1cf';
+        window.location.href = 'https://we.tl/t-80lyqRbkA9';
     }
 });
 
